Fail on warning, require heroku-supported vsn of otp.

--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,8 @@
 
 {sub_dirs, ["rel"]}.
 {deps_dir, ["deps"]}.
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, fail_on_warning]}.
+
+{require_otp_vsn, "R14B0[4]|R15"}.
 
 {deps, [{webmachine, "1.9.*", {git, "git://github.com/basho/webmachine", "HEAD"}}]}.
